feedback & alignment bug + frontend

--- a/public/stylesheets/contact.css
+++ b/public/stylesheets/contact.css
@@ -3,64 +3,25 @@
 Primary style
 
 -------------------------------- */
-html * {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-*, *:after, *:before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-html {
-  height: 100%;
-  box-sizing: border-box;
-}
-
 body {
-  position: relative;
-  margin: 0;
-  padding-bottom: 6rem;
-  min-height: 100%;
-  font-size: 100%;
-  font-family: "PT Sans", sans-serif;
-  color: #505260;
-  background-color: white;
+    min-height: 75rem;
+    padding-top: 3.5rem;
+    width: 100%;
+    font-size: 100%;
+    font-family: "PT Sans", sans-serif;
+    color: #b4a046;
 }
 
 html, body {
     width: 100%;
     height: 100%;
-    margin: 0px;
-    padding: 0px;
     overflow-x: hidden; 
 }
 
-a {
-  color: #2f889a;
-  text-decoration: none;
+s {
+    border-bottom: 3px solid;
 }
 
-img {
-  max-width: 100%;
-}
-
-input, textarea {
-  font-family: "PT Sans", sans-serif;
-  font-size: 16px;
-  font-size: 1rem;
-}
-input::-ms-clear, textarea::-ms-clear {
-  display: none;
-}
-
-/* -------------------------------- 
-
-Main components 
-
--------------------------------- */
 
 /*=====================================
   NAVBAR STYLES
@@ -173,111 +134,90 @@ Main components
     background-color: #5cb85c;
     border-color: #5cb85c
 }
+/* =========================
+         Map Form 
+============================*/
 
-
-/* ===================
-          Body 
-======================*/
-
-.logo1 {
-  position: absolute;
-  top: 25%;
-  left: 50%;
-  margin-left: -400px
-}
-
-.search {
-  margin-top: 5%;
-  left: 50%;
-  margin-left: -600px;
-  position: absolute;
-}
-
-.search--wrapper {
-  height: auto;
-  width: 800px;
-  overflow: hidden;
-  background: transparent;
-  margin: 0;
-  position: static;
-}
-
-.search--form {
-  overflow: hidden;
-  position: relative;
-}
-
-.search--input-wrapper {
-  padding: 0 66px 0 0;
-  overflow: hidden;
-}
-
-.search--input {
+div #map {
   width: 100%;
 }
 
-.search {
-  padding: 0 25px 0 200px; /* Padding for other horizontal elements */
+/* Divide */
+
+.content-wrapper {
+  width: 100%;
+  overflow: auto;
 }
 
-.search--input {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 60px;
-  padding: 0 46px 0 10px;
-  border-color: #888;
-  border-radius: 35px; /* (height/2) + border-width */
-  border-style: solid;
-  border-width: 5px;
-  margin-top: 15px;
-  color: #333;
-  font-family: 'Helvetica', sans-serif;
-  font-size: 26px;
+/* =========================
+        Contact Form 
+============================*/
+.cd-wrapper {
+  float: left;
+  width: 75%;
+  height: 100%;
+}
+
+.cd-contact-wrapper {
+  width: 70%;
+  margin-left: 12.5%;
+}
+
+.drop {
+  font-size:30px;
+}
+
+.form-horizontal input.full-width {
+  width: 65%;
+}
+
+.fieldset {
+  left: 50%;
+  margin-left: 250px;
+  margin-top: 30px;
+}
+
+.form-horizontal input[type=submit] {
+  padding: 16px 0;
+  cursor: pointer;
+  background: #b4a046;
+  color: #1a1a1a;
+  font-weight: bold;
+  border: none;
+
   -webkit-appearance: none;
   -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
 }
-  
-.search--submit {
-  position: absolute;
-  right: 0;
-  top: 0;
-  display: block;
-  width: 60px;
-  height: 60px;
-  padding: 0;
-  border: none;
-  margin-top: 20px; /* margin-top + border-width */
-  margin-right: 30px; /* border-width */
-  background: transparent;
-  color: #888;
-  font-family: 'Helvetica', sans-serif;
-  font-size: 40px;
-  line-height: 60px;
-}
-
-.search--input:focus {
+.no-touch .form-horizontal input[type=submit]:hover, .no-touch .form-horizontal input[type=submit]:focus {
+  background: #a08d39;
   outline: none;
-  border-color: #333;
 }
 
-.search--input:focus.search--submit {
-  color: #333; 
+
+/* =========================
+        Our Mail Form 
+============================*/
+
+.cd-us-wrapper {
+  float: right;
+  right: 25%;
+  height: 100%;
 }
 
-.search--submit:hover {
-  color: #333;
-  cursor: pointer;
+.company-name {
+    font-size:26px;
 }
 
-::-webkit-input-placeholder {
-  color: #888;  
+.company-description {
+  
 }
 
-input:-moz-placeholder {
-  color: #888
-}
-
+/* =========================
+        Footer Form 
+============================*/
 .footer {
   position: fixed;
   right: 0;
@@ -288,8 +228,8 @@ input:-moz-placeholder {
   background-color: #1a1a1a;
   color: #b4a046;
   text-decoration: none;
+  width: 100%;
 }
-
 .about {
   color: #b4a044;
 }
